sass/header.scss
@import "../bower_components/bourbon/app/assets/stylesheets/bourbon";

$header-border-color : rgba( 0, 0, 0, 0.2 );
$header-menu-item-color: #414042;
$header-menu-item-hover-color: #000;
$breadcrumb-color : #414042;
$breadcrumb-hover-color : #000;

header {
  &:before{
    display: block;
    content: '';
    padding-top: 105px;
  }
  .header {
    @include position(fixed, 0 null null 0);
    z-index: 255;
    width: 100%;
    background-color: #fff;
    font-family: "Open Sans", serif;
    a{
      font-size: 14px;
      &:link, &:active, &:visited{
        color: $header-menu-item-color;
        text-decoration: none;
      }
      &:hover{
        color: $header-menu-item-hover-color;
      }
      &.active{
        text-decoration: underline;
      }
    }
    border-bottom: solid 1px $header-border-color;

    &__container{
      position: relative;
      z-index: 256;
      @include display(flex);
      @include flex-direction(column);
      @include align-items(center);
      @include justify-content(center);
      width: 100%;
    }

    &__bar {
      @include display(flex);
      @include align-items(center);
      @include justify-content(space-between);
      height: 105px;
      max-width: 920px;
      width: 100%;
      padding-left: 20px;
      padding-right: 20px;
    }

    &__navigation {
      @include display(inline-flex);
      text-transform: uppercase;
    }

    &__language {
      text-transform: uppercase;
      font-size: 14px;
    }

    &__language__pl {
      margin-right: 10px;
    }

    &__divider {
      margin-left: 50px;
      margin-right: 50px;
    }

    &__main-menu {
      @include display(inline-flex);
      margin: 0;
      list-style-type: none;

      &__item {
        position: relative;
        margin-left: 20px;
        margin-right: 20px;
        cursor: pointer;

        a{
          &:hover{
            text-decoration: underline;
          }
        }
        &:last-of-type {
          margin-right: 0;
        }
      }
    }
  }

  .breadcrumb{
    border-bottom: solid 1px $header-border-color;
    &__bar {
      @include display( flex );
      @include align-items(center);
      height: 50px;
      max-width: 920px;
      width: 100%;
      margin: 0 auto;
      padding-left: 20px;
      padding-right: 20px;
      a{
        font-family: "Open Sans";
        font-size: 14px;
        text-decoration: none;
        &:link,&:visited,&:active{
          color: $breadcrumb-color;
        }
        &:hover{
          color: $breadcrumb-hover-color;
        }
        span.breadcrumb__bar__item{
          &:before{
            content: '\00a0» ';
            color: $breadcrumb-color;
          }
        }
      }
      a.active{
        span.breadcrumb__bar__item{
          &:before{
            content: '\00a0» ';
            color: $breadcrumb-color;
          }
          color: $breadcrumb-hover-color;
        }
      }
    }
  }

  .page-title{
    padding: 30px 0;
    &__container{
      width: 100%;
      max-width: 920px;
      margin: 0 auto;
      h1{
        font-family: "Open Sans";
        margin: 0;
        padding: 0;
        font-size: 24px;
        color: #4f555b;
      }
    }
  }

  .subpages_container {
    @include position(fixed, -95px null null 0);
    width: 100%;
    height: 200px;
    background-color: #ebebeb;
  }

  .navigation {
    @include position(absolute, 0 null null 0);
    z-index: 128;
    @include display(flex);
    @include align-items(center);
    @include justify-content(center);
    width: 100%;
    opacity: 0;
    font-family: "Open Sans", serif;
    a{
      font-size: 14px;
      &:link, &:active, &:visited{
        color: $header-menu-item-color;
        text-decoration: none;
      }
      &:hover{
        color: $header-menu-item-hover-color;
      }
    }

    &__bar {
      @include display(inline-flex);
      height: 105px;
      max-width: 920px;
      width: 100%;
      margin: 0 auto;
      padding: 20px 20px 0;

      &__list {
        width: 25%;

        &__title {
          padding-bottom: 10px;
          font-size: 15px;
          font-weight: bold;
          text-transform: uppercase;
        }
        ul {
          padding: 0;
          margin: 0;
          font-size: 13px;
          list-style: none;
          li:before{
            content: '» ';
          }
        }
      }
    }
  }
}

